[package]
name = "pfp_server"
version = "0.1.0"
authors = ["c650 <c650@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
cargo-watch = "7.5.0"
serde = "1.0.117"
rust-argon2="0.8.2"
rand = "0.5.0"
actix-session="0.4.0"
mongodb = {version = "1.1.1", default-features = false, features=["sync"]}
bson = "*"
geojson= "*"
dotenv = "0.15.0"
futures = "0.3.4"
cfg-if = "*"
reqwest = {version="*", features = ["json"]}
plaid={git="https://github.com/ucfinancegroup/plaid"}
serde_json = "*"

[features]
development = []

