[package]
name = "pfp_server"
version = "0.1.0"
authors = ["c650 <c650@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
actix-web = "3"
actix-session="0.4.0"
actix-web-validator={git="https://github.com/c650/actix-web-validator"}
serde = "1.0.117"
rust-argon2="0.8.2"
rand = "0.8.3"
bson = "*"
geojson= "*"
futures = "0.3.4"
validator = { version = "*", features = ["derive"] }
cfg-if = "*"
reqwest = {version="*", features = ["json"]}
plaid={git="https://github.com/ucfinancegroup/plaid"}
serde_json = "*"
wither = "0.9.0-alpha.2"
chrono="*"
async-std="*"
log="*"
simple_logger = {version = "1.11.0", default-features= false}
rust_decimal= {version="*", features=["serde-float"]}
rust_decimal_macros = "*"

[features]
development = []

